# Blog

./: CMakeLists.txt  README.md  build.ps1  新建 文本文档.txt
ComLib/detours/x86/: detours.lib
Common/: CommonHead.h  EncodingConversion.h  MyPrintTool.cpp  logger.cpp  logger.h
Common/x64/: detours.lib
CommonTools/: DestructWithThreadNotEnd.h  Hide_Tray_icon.h  Set_dir_only_read.h  list_kernel_obj.h  main.cpp  service_opt.h  test.h  utils.h
CommonTools/AssistCollectProc/: AssistCollectProc.cpp  AssistCollectProc.h
CommonTools/GetProcInfo/: GetProcInfo.cpp  GetProcInfo.h  功能说明.txt
CommonTools/GetTaskMsgProc/: AssistCollectProc.cpp  AssistCollectProc.h  GetTaskMsgProcData.cpp  GetTaskMsgProcData.h  功能说明.txt
CommonTools/JobQueue/: JobQueue.cpp  JobQueue.h
CommonTools/ListConfigIni/: list_ini.cpp  list_ini.h
CommonTools/ProcessProtect/: ProcessProtect.cpp  ProcessProtect.h
CommonTools/SetWinSound/: PolicyConfig.h  SetWinSound.cpp  SetWinSound.h
CommonTools/TaskQueue/: ReadMe.md
CppDesignModel/: DesginModel.cpp  utils.h
CppDesignModel/DesginModel/: DesginModel.sln
CppDesignModel/DesginModel/DesginModel/: DesginModel.cpp  DesginModel.vcxproj  DesginModel.vcxproj.filters  TempalateModel.h  utils.h
Driver/DriverControl/: DriverControl.cpp  DriverControl.h  DriverControl.rc  DriverControl.sln  DriverControl.vcxproj  DriverControlDlg.cpp  DriverControlDlg.h  resource.h
Driver/DriverControl/ControlDrv/: ControlDrv.cpp  ControlDrv.h
Driver/DriverControl/res/: DriverControl.rc2
Driver/NetworkFilterDrv/: README.md  README2.md  WFPDrvFilter.sln
Driver/NetworkFilterDrv/CommSample/: AppComm.cpp  AppComm.h  AppMain.cpp  CommSample.vcxproj  CommSample.vcxproj.filters  ScreenShot.cpp  ScreenShot.h  util.cpp  util.h
Driver/NetworkFilterDrv/WFPDrvFilter/: Comm.c  Comm.h  FilterList.c  FilterList.h  InjectList.c  InjectList.h  Main.c  ProcessInjection.c  ProcessInjection.h  ProcessProhibition.c  ProcessProhibition.h  ProcessTime.c  ProcessTime.h  ProcessTimeList.c  ProcessTimeList.h  TdiLayer.c  TdiLayer.h  Unrevealed.h  WFPDrvFilter.vcxproj  WFPDrvFilter.vcxproj.filters  WfpFilter.c  WfpFilter.h  util.c  util.h
Driver/SerialFlt/: SerialFlt.sln  SerialFlt.vcxproj  main.c
Driver/WFPDrivers/: WFPEnumDriver.sln
Driver/WFPDrivers/WFPCalloutDriver/: WFPCalloutDriver.inf  WFPCalloutDriver.vcxproj  WFPCalloutDriver.vcxproj.filters  main.cpp  wfp.cpp  wfp.h
Driver/inject/RemoteThread/: xmake.lua
Driver/kbd/InstallDrv/: InstallDrv.cpp  InstallDrv.sln  InstallDrv.vcxproj  InstallDrv.vcxproj.filters
Driver/kbd/kbdflter/: Kbd.c  (+2 more)
Driver/kbdflt/: kbdflt.sln
Driver/kbdflter/: Kbd.c  Poc.c  Poc.inf  Poc.vcxproj  global.h
Driver/reg_flt/: Set_RegAcc.bat
ISensWinlogon/: ISensWinlogon.sln
ISensWinlogon/ISensWinlogon/: ISensWinlogon.vcxproj  ISensWinlogon.vcxproj.filters  TestSens.cpp
MyHook/InitHook/: InitHook.sln
MyHook/MyHook/: MyHook.sln
Service/: CreateServ.cpp
TLS/windows/: TLS.sln
clipboardfile-main/TestClipboard/: CFileInfo.cpp  CFileInfo.h  DataObject.cpp  DataObject.h  HelpCoInitialize.h  Resource.h  TestClipboard.cpp  TestClipboard.h  TestClipboard.rc  TestClipboard.vcxproj  TestClipboard.vcxproj.filters  VirtualFileSrcStream.cpp  VirtualFileSrcStream.h  framework.h  logger.cpp  logger.h  pipe_wrapper.cpp  pipe_wrapper.h
qxl-master/: .gitmodules
qxl-master/wddm/: dirs  qxl.inf
qxl-master/xddm/: QXLInstaller.wxs  build.bat  dirs
windows/APC/: APC.sln  APC基础.md
(+279 files in other folders)
